@@ -1,5 +1,11 @@
 2005-12-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/main.cpp:
+
+	Disable timeout when set to 0. Patch by Robert O'Callahan.
+
+2005-12-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/Writer.cpp:
 	* src/Writer.h:
 	* src/main.cpp:
